--- a/.github/workflows/javascript-tests.yaml
+++ b/.github/workflows/javascript-tests.yaml
@@ -21,12 +21,7 @@ jobs:
 
     env:
       BUILDKITE_ANALYTICS_TOKEN: ${{ secrets.BUILDKITE_ANALYTICS_TOKEN }}
-      TRUNK_STAGING_ORG_API_TOKEN: ${{ secrets.TRUNK_PROD_ORG_API_TOKEN }}
       TRUNK_PROD_ORG_API_TOKEN: ${{ secrets.TRUNK_PROD_ORG_API_TOKEN }}
-      TRUNK_DEV_ORG_API_TOKEN: ${{ secrets.TRUNK_PROD_ORG_API_TOKEN }}
-      TRUNK_DEV2_ORG_API_TOKEN: ${{ secrets.TRUNK_PROD_ORG_API_TOKEN }}
-      TRUNK_DEV3_ORG_API_TOKEN: ${{ secrets.TRUNK_PROD_ORG_API_TOKEN }}
-      TRUNK_DEV4_ORG_API_TOKEN: ${{ secrets.TRUNK_PROD_ORG_API_TOKEN }}
 
     steps:
       - uses: actions/checkout@v4
@@ -70,6 +65,9 @@ jobs:
           cli-version: ${{ inputs.cli-version }}
           junit-paths: "**/*_test.xml,**/junitresults-*.xml"
           run: npm run jest-test
+        env:
+          BUILDKITE_ANALYTICS_TOKEN: ${{ secrets.BUILDKITE_ANALYTICS_TOKEN }}
+          TRUNK_PROD_ORG_API_TOKEN: ${{ secrets.TRUNK_PROD_ORG_API_TOKEN }}
 
       - name: Run Jasmine Tests
         if: ${{ always() }}
