--- a/.github/actions/analytics-uploader-wrapper/action.yaml
+++ b/.github/actions/analytics-uploader-wrapper/action.yaml
@@ -2,24 +2,24 @@ name: Trunk Analytics Uploader Wrapper
 description: Wrapper that supplies defaults to the `analytics-uploader` action
 
 inputs:
-  # token-staging:
-  #   description: Organization token for staging.
-  #   required: true
+  token-staging:
+    description: Organization token for staging.
+    required: true
   token-prod:
     description: Organization token for prod.
     required: true
-  # token-dev:
-  #   description: Organization token for dev.
-  #   required: true
-  # token-dev2:
-  #   description: Organization token for dev2.
-  #   required: true
-  # token-dev3:
-  #   description: Organization token for dev3.
-  #   required: true
-  # token-dev4:
-  #   description: Organization token for dev4.
-  #   required: true
+  token-dev:
+    description: Organization token for dev.
+    required: true
+  token-dev2:
+    description: Organization token for dev2.
+    required: true
+  token-dev3:
+    description: Organization token for dev3.
+    required: true
+  token-dev4:
+    description: Organization token for dev4.
+    required: true
   junit-paths:
     description: Comma-separated list of glob paths to junit files.
     required: true
