--- a/.github/workflows/factory.yaml
+++ b/.github/workflows/factory.yaml
@@ -3,7 +3,7 @@ name: PR Factory
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: 0 */6 * * *
 
 jobs:
   merge-pr:
